# tsutil-py

./: README.md  pyproject.toml
examples/: class_with_methods.py
queries/: class_method_query.scm  long_function_query.scm  method_query.scm  multiple_returns_query.scm  too_many_parameters_query.scm
src/tsutil/: main.py  node_map.py  node_printer.py  query_executor.py
