[project]
name = "tsutil"
version = "0.1.0"
description = "Syntax tree printer utility"
authors = [
    {name = "Louis Maddox", email = "louismmx@gmail.com"},
]
dependencies = [
    "tree-sitter==0.20.1",
    "termcolor==2.3.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-rust>=0.21.2",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
